
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_long ;
struct sockaddr_in {int dummy; } ;
struct sockaddr {int dummy; } ;
typedef int socklen_t ;
typedef scalar_t__ pid_t ;


 int EXIT_FAILURE ;
 int EXIT_SUCCESS ;
 int accept (int,struct sockaddr*,int *) ;
 int close (int) ;
 int die (char*) ;
 int do_listen () ;
 scalar_t__ fork () ;
 int fprintf (int ,char*,char*) ;
 int sploit (int,struct sockaddr_in*,int ) ;
 int sscanf (char*,char*,int *) ;
 int stderr ;

int main(int argc, char **argv)
{
    int lsock, asock;
    u_long nbase = 0;
    struct sockaddr_in sa;
    pid_t cpid;
    socklen_t salen;

    if(argc < 2){
        fprintf(stderr, "\tUsage: %s <base of nonce buffer>\n", argv[0]);
        return EXIT_FAILURE;
    }
    sscanf(argv[1], "%lx\n", &nbase);

    lsock = do_listen();

    while(1){
        asock = accept(lsock, (struct sockaddr *)&sa, &salen);

        if( (cpid = fork()) == 0)
            sploit(asock, &sa, nbase);
        else if(cpid < 0)
            die("fork");

        close(asock);
    }

    return EXIT_SUCCESS;
}
